--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,43 @@
+h1, h2, h3 {
+  font-size: 1.4rem;
+}
+
 body {
+  font-size: 15px;
+  line-height: 1.5;
   padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  font-family: "Helvetica Neue",Helvetica,Arial,"ヒラギノ角ゴ Pro W3","Hiragino Kaku Gothic Pro","ＭＳ Ｐゴシック","MS PGothic","メイリオ",Meiryo,sans-serif;
+}
+
+p {
+  font-size: 0.8rem;
 }
 
 a {
   color: #00B7FF;
+}
+
+table {
+  border-collapse: separate;
+  border-spacing: 1px;
+  text-align: center;
+  line-height: 1.5;
+  font-size: 1.0rem;
+}
+
+table th {
+  width: 155px;
+  padding: 10px;
+  font-weight: bold;
+  vertical-align: top;
+  color: #fff;
+  background: #036;
+}
+
+table td {
+  width: 155px;
+  padding: 10px;
+  vertical-align: top;
+  border-bottom: 1px solid #ccc;
+  background: #eee;
 }
